dataset1235/2025-2/2318198438/users/1139469213/executions/2601575092_3940197836.log
== RUN (2025-08-12 01:12:44)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(5**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:13:43)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(aresa**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ((3*(3**0.5))*(aresa**2))/2
                          ^^^^^
NameError: name 'aresa' is not defined. Did you mean: 'aresta'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ((3*(3**0.5))*(aresa**2))/2
                          ^^^^^
NameError: name 'aresa' is not defined. Did you mean: 'aresta'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:13:37)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(aresta**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:07:39)
-- CODE: 
aresta = 5
area = 
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:13:36)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(aresta**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:13:48)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(aresta**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:13:47)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(aresta**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:13:22)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(5**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:13:24)
-- CODE: 
aresta = 5
area = ((3*(3**0.5))*(5**2))/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
